# ChangeLog for app-admin/emacs-updater
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Oct 2012; Ulrich Müller <ulm@gentoo.org> emacs-updater-9999.ebuild:
  Update version of portage-utils dependency. Specify LICENSE more precisely.

  09 Jun 2012; Ulrich Müller <ulm@gentoo.org> emacs-updater-9999.ebuild:
  Change live ebuild to use Git. Merge changes from Portage tree.

  12 Apr 2009; Ulrich Mueller <ulm@gentoo.org> emacs-updater-9999.ebuild:
  Install man page. Update dependencies.

  04 Sep 2008; Ulrich Mueller <ulm@gentoo.org>
  -emacs-updater-1.0_rc1.ebuild, -emacs-updater-1.0_rc2.ebuild:
  Remove release candidates since the package was added to Portage tree.

*emacs-updater-1.0_rc2 (02 Sep 2008)

  02 Sep 2008; Ulrich Mueller <ulm@gentoo.org>
  +emacs-updater-1.0_rc2.ebuild:
  Version bump.

*emacs-updater-1.0_rc1 (29 Aug 2008)

  29 Aug 2008; Ulrich Mueller <ulm@gentoo.org> +emacs-updater-1.0_rc1.ebuild:
  Prepare for stand-alone release of emacs-updater.

*emacs-updater-9999 (15 Aug 2008)

  15 Aug 2008; Ulrich Mueller <ulm@gentoo.org> +metadata.xml,
  +emacs-updater-9999.ebuild:
  Initial import of stand-alone emacs-updater, package split off from
  app-admin/eselect-emacs.
