@@ -1,8 +1,8 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=4
+EAPI=5
 
 MY_PN="eselect-emacs"
 EGIT_REPO_URI="git://git.overlays.gentoo.org/proj/emacs-tools.git"
@@ -11,18 +11,13 @@ EGIT_BRANCH="${MY_PN}"
 inherit git-2
 
 DESCRIPTION="Manages ctags implementations"
-HOMEPAGE="http://www.gentoo.org/proj/en/lisp/emacs/"
-#SRC_URI="mirror://gentoo/${MY_P}.tar.bz2"
-SRC_URI=""
+HOMEPAGE="http://wiki.gentoo.org/wiki/Project:Emacs"
 
-LICENSE="GPL-2"
+LICENSE="GPL-2+"
 SLOT="0"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
-IUSE=""
 
-DEPEND=""
-RDEPEND=">=app-admin/eselect-1.2.3
-	!<=app-admin/eselect-emacs-1.3"
+RDEPEND=">=app-admin/eselect-1.2.3"
 
 S="${WORKDIR}/${MY_PN}"
 
@@ -30,6 +25,6 @@ src_compile() { :; }
 
 src_install() {
 	insinto /usr/share/eselect/modules
-	doins ctags.eselect || die
-	doman ctags.eselect.5 || die
+	doins ctags.eselect
+	doman ctags.eselect.5
 }
